Correcting stretched display of injuryTolerancesTable

--- a/gurps4e.css
+++ b/gurps4e.css
@@ -861,7 +861,6 @@ attribute-senses {
 }
 
 .injuryTolerancesTable {
-	flex: 1;
 	width: unset;
 	margin: 0px 5px;
 }
